2002-07-11 Alp Toker  <alp@atoker.com>

	* csvorbis/VorbisFile.cs: Open files read only, make read() public and
	ensure that methods return a value.

2002-06-07 Mark Crichton  <crichton@gimp.org>

	* csvorbis/VorbisFile.cs: Now works for little endian machines.
	Big endian machines Coming Soon (TM)

2002-23-05 Mark Crichton  <crichton@gimp.org>

	* README, COPYING: added
	* all makefiles had their slashes fixed for Windows.
	csc seems so unique...

2002-17-05 Mark Crichton  <crichton@gimp.org>

	* csogg,csvorbis,OggDecoder: added Makefile
	* Makefile: added Makefile
	* ChangeLog: started ChangeLog