@@ -1,6 +1,7 @@
 DIRS=csogg csvorbis OggDecoder
 CSC=csc
 MCS=mcs
+SMCS="smcs -d:NET_2_1"
 
 all: unix
 
@@ -8,6 +9,12 @@ windows:
 	-mkdir bin
 	for i in $(DIRS); do				\
 		(cd $$i; CSC=$(CSC) make windows) || exit 1;\
+	done;
+
+moon: 
+	-mkdir bin
+	for i in $(DIRS); do				\
+		(cd $$i; MCS=$(SMCS) make) || exit 1;\
 	done;
 
 unix: 
