@@ -1,3 +1,12 @@
+2009-03-23  Atsushi Enomoto  <atsushi@ximian.com>
+
+	* Makefile,
+	  csogg/StreamState.cs,
+	  csvorbis/Info.cs,
+	  csvorbis/Comment.cs,
+	  csvorbis/VorbisFile.cs :
+	  add build option for moonlight.
+
 2002-07-11 Alp Toker  <alp@atoker.com>
 
 	* csvorbis/VorbisFile.cs: Open files read only, make read() public and
